# guan_dan_os

./: .gitignore  .npmrc  README.md  package.json  pnpm-lock.yaml
.claude/: settings.local.json
apps/lambda_py/: .gitignore  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  UV_MIGRATION.md  deploy-config.json  docker-compose.yml  package.json  pyproject.toml  requirements-dev.txt  requirements.txt
apps/lambda_py/functions/hello/: __init__.py  handler.py
apps/lambda_py/functions/user/: __init__.py  handler.py
apps/lambda_py/guan_dan_os_lambda_py.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
apps/lambda_py/scripts/: build.py  deploy.py
apps/lambda_py/shared/: __init__.py  utils.py
apps/lambda_py/tests/: conftest.py
apps/lambda_py/tests/integration/: conftest.py  test_user_localstack.py
apps/lambda_py/tests/unit/: test_hello.py  test_user.py
apps/lambda_ts/: .env.example  .gitignore  QUICKSTART.md  README.md  deploy-config.json  docker-compose.yml  package.json  tsconfig.json  vitest.localstack.config.ts
apps/lambda_ts/scripts/: build.ts  deploy.ts  setup-db.ts
apps/lambda_ts/tests/: setup.localstack.ts
apps/mobile/: app.json  metro.config.js  package.json
apps/web/: .env.local.example  GAME_UI_README.md  next.config.ts  package.json
docs/: game_flow_ui_design.md  guandan_global_web3_complete.md  guandan_tech_arch_v4_gamefi.md  localstack-verification-report.md  speckit_constitution_prompt
docs/images/: card.html
docs/phase_1/: guandan_rules_corrected.md  guandan_v2.1_spec.md  phase1_mvp_requirements.md
openspec/: project.md
(+44 files in other folders)
