[project]
name = "guan-dan-os-lambda-py"
version = "0.0.1"
description = "AWS Lambda functions in Python with PowerTools"
requires-python = ">=3.13"
dependencies = [
    "aws-lambda-powertools[all]>=3.4.0",
    "boto3>=1.35.0",
    "pydantic[email]>=2.10.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-cov>=6.0.0",
    "pytest-mock>=3.14.0",
    "moto>=5.0.0",
    "black>=24.10.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "boto3-stubs[lambda,dynamodb,s3]>=1.35.0",
]

[build-system]
requires = ["setuptools>=75.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["functions", "shared"]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=functions --cov=shared --cov-report=term-missing"
